Fixed CRF. Everything working smoothly

--- a/notebooks/knowledge_graph_pipeline.ipynb
+++ b/notebooks/knowledge_graph_pipeline.ipynb
@@ -282,60 +282,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Let's examine exactly what the CoNLL-2003 dataset structure looks like\n",
-    "from datasets import load_dataset\n",
-    "import pprint\n",
-    "\n",
-    "# Load the dataset\n",
-    "print(\"Loading CoNLL-2003 dataset...\")\n",
-    "dataset = load_dataset(\"conll2003\", trust_remote_code=True)\n",
-    "\n",
-    "# Examine the dataset structure\n",
-    "print(\"\\nDataset keys:\", dataset.keys())\n",
-    "print(\"\\nTrain dataset features:\", dataset['train'].features)\n",
-    "\n",
-    "# Look at the first example\n",
-    "print(\"\\nFirst example in train set:\")\n",
-    "pprint.pprint(dataset['train'][0])\n",
-    "\n",
-    "# Print the tokens from the first example\n",
-    "print(\"\\nTokens from first example:\")\n",
-    "print(dataset['train'][0]['tokens'])\n",
-    "print(\"Type of tokens:\", type(dataset['train'][0]['tokens']))\n",
-    "print(\"Length of tokens:\", len(dataset['train'][0]['tokens']))\n",
-    "\n",
-    "# Examine individual tokens\n",
-    "print(\"\\nFirst 5 tokens:\")\n",
-    "for i, token in enumerate(dataset['train'][0]['tokens'][:5]):\n",
-    "    print(f\"Token {i}: '{token}' (type: {type(token)})\")\n",
-    "\n",
-    "# Now let's look at the NER tags\n",
-    "print(\"\\nNER tags from first example:\")\n",
-    "print(dataset['train'][0]['ner_tags'])\n",
-    "print(\"Type of ner_tags:\", type(dataset['train'][0]['ner_tags']))\n",
-    "print(\"Length of ner_tags:\", len(dataset['train'][0]['ner_tags']))\n",
-    "\n",
-    "# Print tag mapping\n",
-    "tag_names = dataset['train'].features['ner_tags'].feature.names\n",
-    "print(\"\\nNER tag mapping:\")\n",
-    "for i, tag in enumerate(tag_names):\n",
-    "    print(f\"{i} -> {tag}\")\n",
-    "\n",
-    "# Print sample with mapped tags\n",
-    "print(\"\\nFirst example with mapped tags:\")\n",
-    "tokens = dataset['train'][0]['tokens']\n",
-    "ner_tags = dataset['train'][0]['ner_tags']\n",
-    "mapped_tags = [tag_names[tag] for tag in ner_tags]\n",
-    "for token, tag, mapped_tag in zip(tokens, ner_tags, mapped_tags):\n",
-    "    print(f\"{token}: {tag} -> {mapped_tag}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Import libraries for model training and evaluation\n",
     "import logging\n",
     "import numpy as np\n",
@@ -349,7 +295,7 @@
     "\n",
     "# Initialize NER extractors\n",
     "spacy_extractor = SpacyNERExtractor()\n",
-    "crf_extractor = CRFExtractor()\n",
+    "crf_extractor = CRFExtractor('./output/models/crf_ner_model.pkl')\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
     "print(\"Training and comparing NER models...\")\n",
@@ -368,9 +314,9 @@
     "\n",
     "# 2. Prepare data for CRF model\n",
     "print(\"\\nPreparing data for CRF model...\")\n",
-    "max_train_samples = 500  # Limiting samples for demo purposes\n",
-    "max_val_samples = 100\n",
-    "max_test_samples = 100\n",
+    "max_train_samples = None  # You can limit samples\n",
+    "max_val_samples = None\n",
+    "max_test_samples = None\n",
     "\n",
     "def word2features(tokens, i):\n",
     "    \"\"\"\n",
@@ -425,47 +371,38 @@
     "    \"\"\"Convert a list of tokens to a list of features.\"\"\"\n",
     "    return [word2features(tokens, i) for i in range(len(tokens))]\n",
     "\n",
+    "def sent2labels(sent_labels, tag_names):\n",
+    "    \"\"\"Convert numeric labels to BIO tag strings.\"\"\"\n",
+    "    return [tag_names[label] for label in sent_labels]\n",
+    "\n",
     "def prepare_data_for_crf(dataset_split, tag_names, max_samples=None):\n",
     "    \"\"\"\n",
     "    Prepare features and labels from a dataset split for CRF training.\n",
-    "    \n",
-    "    Args:\n",
-    "        dataset_split: Dataset split (train, validation, test)\n",
-    "        tag_names: List of tag names\n",
-    "        max_samples: Maximum number of samples to process\n",
-    "        \n",
-    "    Returns:\n",
-    "        tuple: (X_features, y_labels)\n",
     "    \"\"\"\n",
     "    X = []\n",
     "    y = []\n",
     "    \n",
-    "    samples = dataset_split if max_samples is None else dataset_split[:max_samples]\n",
-    "    print(f\"Processing {len(samples)} samples\")\n",
+    "    # Use proper indexing to get actual data samples\n",
+    "    sample_indices = range(min(len(dataset_split), max_samples or len(dataset_split)))\n",
     "    \n",
-    "    for i, sample in enumerate(samples):\n",
+    "    for i in sample_indices:\n",
     "        try:\n",
-    "            # Extract tokens and tags\n",
+    "            # Get the actual sample data by index\n",
+    "            sample = dataset_split[i]\n",
+    "            \n",
+    "            # Process tokens and labels\n",
     "            tokens = sample['tokens']\n",
     "            ner_tags = sample['ner_tags']\n",
     "            \n",
-    "            # Generate features\n",
-    "            features = sent2features(tokens)\n",
-    "            \n",
-    "            # Convert numeric tags to string labels\n",
-    "            labels = [tag_names[tag] for tag in ner_tags]\n",
-    "            \n",
-    "            # Add to dataset\n",
-    "            X.append(features)\n",
-    "            y.append(labels)\n",
+    "            # Extract features and convert labels\n",
+    "            X.append(sent2features(tokens))\n",
+    "            y.append(sent2labels(ner_tags, tag_names))\n",
     "            \n",
     "            # Print progress\n",
     "            if (i + 1) % 100 == 0:\n",
-    "                print(f\"Processed {i + 1}/{len(samples)} samples\")\n",
-    "                \n",
+    "                print(f\"Processed {i + 1}/{len(sample_indices)} samples\")\n",
     "        except Exception as e:\n",
     "            print(f\"Error processing sample {i}: {e}\")\n",
-    "            continue  # Skip this sample and continue with the next\n",
     "    \n",
     "    return X, y\n",
     "\n",
@@ -668,51 +605,88 @@
     "    \n",
     "    return tags\n",
     "\n",
+    "def map_spacy_to_conll(spacy_label):\n",
+    "    \"\"\"Map spaCy entity types to CoNLL types.\"\"\"\n",
+    "    mapping = {\n",
+    "        'PERSON': 'PER',\n",
+    "        'ORG': 'ORG',\n",
+    "        'GPE': 'LOC',  # GPE (countries, cities, etc.) maps to LOC in CoNLL\n",
+    "        'LOC': 'LOC',\n",
+    "        'PRODUCT': 'MISC',\n",
+    "        'EVENT': 'MISC',\n",
+    "        'WORK_OF_ART': 'MISC',\n",
+    "        'LANGUAGE': 'MISC',\n",
+    "        'FAC': 'LOC',  # Facilities often map to LOC\n",
+    "        'NORP': 'MISC'  # Nationalities, religious and political groups\n",
+    "    }\n",
+    "    return mapping.get(spacy_label, None)\n",
+    "\n",
     "def evaluate_spacy_ner(test_dataset, tag_names, max_samples=None):\n",
     "    \"\"\"Evaluate spaCy NER on the test dataset.\"\"\"\n",
-    "    true_labels = []\n",
-    "    pred_labels = []\n",
+    "    true_entities_list = []\n",
+    "    pred_entities_list = []\n",
     "    \n",
-    "    samples = test_dataset if max_samples is None else test_dataset[:max_samples]\n",
-    "    print(f\"Evaluating spaCy on {len(samples)} samples\")\n",
+    "    # Use proper indexing to get actual data samples\n",
+    "    sample_indices = range(min(len(test_dataset), max_samples or len(test_dataset)))\n",
+    "    print(f\"Evaluating spaCy on {len(sample_indices)} samples\")\n",
     "    \n",
-    "    for i, sample in enumerate(samples):\n",
-    "        if i % 10 == 0:\n",
-    "            print(f\"Processing sample {i+1}/{len(samples)}\")\n",
+    "    for i in sample_indices:\n",
+    "        if i % 1000 == 0:\n",
+    "            print(f\"Processing sample {i+1}/{len(sample_indices)}\")\n",
     "        \n",
-    "        tokens = sample['tokens']\n",
-    "        text = ' '.join(tokens)\n",
-    "        ner_tags = sample['ner_tags']\n",
-    "        \n",
-    "        # Process with spaCy\n",
-    "        doc = nlp(text)\n",
-    "        \n",
-    "        # Create character indices for tokens in the original text\n",
-    "        token_indices = []\n",
-    "        pos = 0\n",
-    "        for token in tokens:\n",
-    "            start = text.find(token, pos)\n",
-    "            if start == -1:  # Token not found\n",
-    "                start = pos  # Fallback\n",
-    "            end = start + len(token)\n",
-    "            token_indices.append((start, end))\n",
-    "            pos = end\n",
+    "        try:\n",
+    "            # Get the actual sample data by index\n",
+    "            sample = test_dataset[i]\n",
     "            \n",
-    "            # Skip any whitespace\n",
-    "            while pos < len(text) and text[pos].isspace():\n",
-    "                pos += 1\n",
-    "        \n",
-    "        # Convert true NER tags to BIO format\n",
-    "        true_bio = [tag_names[tag] for tag in ner_tags]\n",
-    "        \n",
-    "        # Convert spaCy entities to BIO format\n",
-    "        pred_bio = convert_to_bio_tags(text, doc.ents, token_indices)\n",
-    "        \n",
-    "        # Add to results\n",
-    "        true_labels.append(true_bio)\n",
-    "        pred_labels.append(pred_bio)\n",
+    "            tokens = sample['tokens']\n",
+    "            text = ' '.join(tokens)\n",
+    "            ner_tags = sample['ner_tags']\n",
+    "            \n",
+    "            # Get ground truth entities\n",
+    "            true_bio = [tag_names[tag] for tag in ner_tags]\n",
+    "            \n",
+    "            # Process with spaCy\n",
+    "            doc = nlp(text)\n",
+    "            \n",
+    "            # Convert spaCy entities to BIO tags\n",
+    "            pred_bio = ['O'] * len(tokens)\n",
+    "            for ent in doc.ents:\n",
+    "                # Map spaCy entity types to CoNLL types\n",
+    "                ent_type = map_spacy_to_conll(ent.label_)\n",
+    "                if not ent_type:\n",
+    "                    continue\n",
+    "                \n",
+    "                # Find token positions that correspond to this entity\n",
+    "                start_token = None\n",
+    "                end_token = None\n",
+    "                curr_pos = 0\n",
+    "                \n",
+    "                for j, token in enumerate(tokens):\n",
+    "                    token_start = curr_pos\n",
+    "                    token_end = token_start + len(token)\n",
+    "                    \n",
+    "                    # Check if this token overlaps with the entity\n",
+    "                    if token_start <= ent.start_char < token_end and start_token is None:\n",
+    "                        start_token = j\n",
+    "                    if token_start < ent.end_char <= token_end:\n",
+    "                        end_token = j + 1\n",
+    "                        break\n",
+    "                    \n",
+    "                    curr_pos = token_end + 1  # +1 for the space\n",
+    "                \n",
+    "                # If we found the entity position, add to BIO tags\n",
+    "                if start_token is not None and end_token is not None:\n",
+    "                    pred_bio[start_token] = f'B-{ent_type}'\n",
+    "                    for j in range(start_token + 1, end_token):\n",
+    "                        pred_bio[j] = f'I-{ent_type}'\n",
+    "            \n",
+    "            true_entities_list.append(true_bio)\n",
+    "            pred_entities_list.append(pred_bio)\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            logger.error(f\"Error evaluating sample {i} with spaCy: {e}\")\n",
     "    \n",
-    "    return true_labels, pred_labels\n",
+    "    return true_entities_list, pred_entities_list\n",
     "\n",
     "# Evaluate spaCy on a small portion of test data\n",
     "true_entities, spacy_predictions = evaluate_spacy_ner(test_dataset, tag_names, max_test_samples)\n",
@@ -823,10 +797,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 3.2 Extract Entities from Articles\n",
-    "\n",
-    "Now that we have both models ready, let's extract named entities from our articles using both the spaCy model and our trained CRF model.\n",
-    "\n",
     "# Function to prepare features for the CRF model\n",
     "def extract_features_from_text(text):\n",
     "    \"\"\"Extract features for CRF from text.\"\"\"\n",
