--- a/notebooks/knowledge_graph_embedding.ipynb
+++ b/notebooks/knowledge_graph_embedding.ipynb
@@ -439,7 +439,7 @@
     "embedder = KnowledgeGraphEmbedder(namespace=\"http://example.org/graphify/\")\n",
     "\n",
     "# Load the augmented knowledge graph\n",
-    "embedder.load_from_rdf(augmented_kg_path)\n",
+    "embedder.load_from_rdf(original_kg_path)\n",
     "\n",
     "# Split the dataset into training, validation, and test sets\n",
     "training, validation, testing = embedder.split_dataset(train_ratio=0.8, validation_ratio=0.1, test_ratio=0.1)\n",
@@ -522,14 +522,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualize comparison\n",
-    "ax = comparison_df.plot(kind='bar', figsize=(12, 6))\n",
-    "ax.set_title('Knowledge Graph Embedding Model Comparison')\n",
-    "ax.set_ylabel('Score')\n",
-    "ax.set_xlabel('Model')\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Create figure and subplots\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(14, 6))\n",
+    "\n",
+    "# Plot Rank-Based Metrics\n",
+    "comparison_df[['mean_rank']].plot(kind='bar', ax=axes[0], legend=False, color=['#1f77b4'])\n",
+    "axes[0].set_title('Mean Rank Comparison')\n",
+    "axes[0].set_ylabel('Mean Rank')\n",
+    "axes[0].set_xlabel('Model')\n",
+    "\n",
+    "# Plot Hits@K Metrics\n",
+    "comparison_df[['hits_at_1', 'hits_at_3', 'hits_at_10']].plot(kind='bar', ax=axes[1])\n",
+    "axes[1].set_title('Hits@K Comparison')\n",
+    "axes[1].set_ylabel('Score')\n",
+    "axes[1].set_xlabel('Model')\n",
+    "\n",
+    "# Adjust layout\n",
     "plt.tight_layout()\n",
+    "\n",
+    "# Save and show the figure\n",
     "plt.savefig('output/visualization/embedding_model_comparison.png')\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
